Add 10-robot neural sim with selectable robot stats and color legend

--- a/index.html
+++ b/index.html
@@ -16,9 +16,14 @@
         <p>Differential-drive robot seeks the brightest location while avoiding obstacles.</p>
         <div class="stats" id="stats"></div>
         <div class="controls">
+          <label for="robotSelect">View Robot</label>
+          <select id="robotSelect"></select>
+          <div class="legend" id="robotLegend"></div>
           <button id="toggleBtn">Pause</button>
           <button id="resetBtn">Reset Robot</button>
           <button id="newMapBtn">New Map</button>
+          <button id="learnBtn">Learning: On</button>
+          <button id="resetBrainBtn">Reset Brain</button>
         </div>
       </aside>
     </main>
